# rageval

./: pyproject.toml
src/: accuracy.sh  accuracy_config.json  rag_call.sh  rag_call_reinstall.sh  rag_config.json
src/llmperf/: common.py  data_loader.py  energy_collection.py  models.py  rag_accuracy.py  rag_evaluation.py  rag_evaluation_clients.py  rag_evaluation_clients_og.py  utils.py
src/llmperf/ray_clients/: openai_accuracy_client.py  rag_client.py
