[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMPerfRAG"
version = "0.4.0"
description = "A framework for load testing LLM APIs"
authors = [{name="Otto Guo", email="guozhinuan2@gmail.com"}]
license = {text= "Apache-2.0"}
requires-python = ">=3.8"
dependencies = ["pydantic",
                "ray",
                "tqdm",
                "requests",
                "openai",
                "loguru"]
